Fix alignment

--- a/src/components/realtime.component.css
+++ b/src/components/realtime.component.css
@@ -31,8 +31,6 @@
 }
 
 .realtime-icon {
-    width: 75px;
-    height: 75px;
     margin-left: auto;
 }
 
